# karyo

./: .gitignore  README.md
.github/workflows/: backend-tests.yml
backend/: .gitignore  README.md  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0e8c38b5319e_create_users_table.py  4e0d24da803e_create_projects_table.py  9cbcd73a851d_create_project_members_table.py  e9d2b58cd2fc_create_tasks_table.py
backend/app/: main.py
backend/app/api/: auth.py  project.py  task.py
backend/app/core/: config.py  security.py
backend/app/core/security/: bearer.py  dependencies.py  hashing.py  jwt.py  redis.py
backend/app/db/: base.py  base_imports.py  session.py
backend/app/models/: project.py  project_member.py  task.py  user.py
backend/app/repositories/: project.py  task.py  user.py
backend/app/schemas/: project.py  task.py  user.py
backend/app/services/: project.py  task.py  user.py
backend/tests/: conftest.py
backend/tests/docs/: README.md
backend/tests/integration/: test_auth_api.py  test_project_api.py  test_task_api.py
backend/tests/regression/: test_auth_and_permissions_regression.py
backend/tests/unit/: test_project_service.py  test_task_service.py  test_user_service.py
frontend/: README.md  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/projects/: layout.tsx  page.tsx
frontend/components/: Sidebar.tsx
frontend/lib/: api.ts  auth.ts
frontend/types/: index.ts
(+8 files in other folders)
