[project]
name = "karyo-backend"
version = "0.1.0"
description = "Backend API for Karyo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "bcrypt>=5.0.0",
    "pwdlib[bcrypt]>=0.3.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]